--- a/templates/Project Templates/Server/Kitura Endpoint.xctemplate/TemplateInfo.plist
+++ b/templates/Project Templates/Server/Kitura Endpoint.xctemplate/TemplateInfo.plist
@@ -36,7 +36,10 @@
             <key>Class</key>      <string>ShellScript</string>
             <key>ShellPath</key>  <string>/bin/sh</string>
             <key>ShellScript</key>
-            <string>SPM_IMAGE=Kitura swift xcode build</string>
+            <string>SPM_IMAGE=Kitura verbose=no swift xcode build
+# Kitura locates resources in the .build dir (include the default index.html)
+ln -sf "${SOURCE_ROOT}/${PRODUCT_NAME}/.buildzz/.build" "${BUILT_PRODUCTS_DIR}/.build"
+</string>
           </dict>
           <dict><key>Class</key><string>Sources</string>   </dict>
           <dict><key>Class</key><string>Frameworks</string></dict>
