--- a/templates/Project Templates/Server/Kitura Endpoint.xctemplate/TemplateInfo.plist
+++ b/templates/Project Templates/Server/Kitura Endpoint.xctemplate/TemplateInfo.plist
@@ -38,6 +38,7 @@
             <key>ShellScript</key>
             <string>SPM_IMAGE=Kitura verbose=no swift xcode build
 # Kitura locates resources in the .build dir (include the default index.html)
+mkdir -p "${BUILT_PRODUCTS_DIR}"
 ln -sf "${SOURCE_ROOT}/${PRODUCT_NAME}/.buildzz/.build" "${BUILT_PRODUCTS_DIR}/.build"
 </string>
           </dict>
